--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/upe.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>Upsilon Pi Epsilon; <i>Honors Computing Fraternity</i></strong><br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.<br><br><strong>Deans List Engineering</strong><br>Rank within the upper 25th percentile in the School of Engineering.</p>
+                <p class="mb-5"><strong>Upsilon Pi Epsilon; <i>Honors Computing Society</i></strong><br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.<br><br><strong>Deans List Engineering</strong><br>Rank within the upper 25th percentile in the School of Engineering.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
