--- a/index.html
+++ b/index.html
@@ -353,11 +353,25 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i>
+                <div class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i>
                   <br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i>
                   <br>Mathematics Minor</strong> 
-                  <br><i>Relevant Coursework: </i>Data Structures and Object Oriented Programming, Introduction to Discrete Systems, 
-                  Digital Logic Design, Electric Circuits, Multivariable Calculus, Elementary Differential Equations</p>
+                  <br>
+                  <br><i>Relevant Coursework: </i>
+                    <ul style = "list-style-position:inside;">
+                      <li>Data Structures and Object Oriented Programming</li>
+                      <li>Introduction to Discrete Systems</li>
+                      <li>Digital Logic Design</li>
+                      <li>Electric Circuits</li>
+                      <li>Multivariable Calculus</li>
+                      <li>Elementary Differential Equations</li>
+                      <li style = "opacity: 0.5">Systems Programming (In Progress - I.P.)</li>
+                      <li style = "opacity: 0.5">Algorithms and Complexity (I.P.)</li>
+                      <li style = "opacity: 0.5">Introduction to Computer Architecture (I.P)</li>
+                      <li style = "opacity: 0.5">Applied Linear Algebra (I.P.)</li>
+                      <li style = "opacity: 0.5">Probability (I.P.)</li>
+                    </ul>
+                  </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -396,12 +410,24 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/its.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician, Knowledge Base Team Member</i></strong> 
-                  <br>- Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty 
-                  and providing them with prompt and effective solutions.
-                  <br>- Create strategic plan with knowledge base team members to successfully migrate over 1,000 knowledge base
-                  articles onto new web client.
-                </p>
+                <div class="mb-5" style = "opacity: 0.5">
+                  <strong>UConn School of Engineering Undergraduate Teaching Assistant
+                  <br><i>Computer Science and Engineering; Digital Logic Design</i></strong>
+                  <br>Starting January 2020
+                  <ul style = "list-style-position:inside;">
+                    <li>Instruct labs sections of approximately 25 students each.</li>
+                    <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
+                    <li>Demonstrate knowledge of the subject and leadership skills.</li>
+                  </ul>
+                </div>
+                <div class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician, Knowledge Base Team Member</i></strong>
+                  <ul style = "list-style-position:inside;">
+                    <li>Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty 
+                    and providing them with prompt and effective solutions.
+                    <li>Create strategic plan with knowledge base team members to successfully migrate over 1,000 knowledge base
+                    articles onto new web client.
+                  </ul> 
+                </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -440,7 +466,20 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/upe.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>Upsilon Pi Epsilon; <i>Honors Computing Society</i></strong><br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.<br><br><strong>Deans List Engineering</strong><br>Rank within the upper 25th percentile in the School of Engineering.</p>
+                <p class="mb-5">
+                  <strong>HackUMass VII; <i>Second Place Overall</i></strong>
+                  <br>Team project placed within the top 4 of HackUMass VII projects in the preliminary judging round. After a finalist judging round, our project placed second in the overall competition.
+                  <br><br>
+                  <strong>HackUMass VII; <i>Best Web App</i></strong>
+                  <br>Awarded to the HackUMass VII project with the best web app.
+                  <br><br>
+                  <strong>HackUMass VII; <i>Wolfram Award</i></strong>
+                  <br><br>
+                  <strong>Upsilon Pi Epsilon; <i>Honors Computing Society</i></strong>
+                  <br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.
+                  <br><br>
+                  <strong>Deans List Engineering</strong>
+                  <br>Rank within the upper 25th percentile in the School of Engineering.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -479,15 +518,20 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/acm.jpg" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>UConn Association for Computing Machinery; <i>Deep Learning Project Member</i></strong> 
-                  <br>- The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related 
+                <p class="mb-5">
+                  <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
+                  <br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.
+                  <br><br>
+                  <strong>UConn Association for Computing Machinery; <i>Deep Learning Project Member</i></strong> 
+                  <br>The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related 
                   issues and a venue for educational enrichment.
-                  <br>- Collaborate with fellow team members in designing a poker-bot capable of playing amongst multiple
-                  opponents while incorporating machine learning properties (Python).
                   <br><br>
                   <strong>UConn Engineering Ambassadors; <i>Member</i></strong>
                   <br>Engineering Ambassadors engage a diverse student population, our university and the greater community in activities 
                   that inspire them to explore a variety of creative solutions to the problems facing humanity.
+                  <br><br>
+                  <strong>UConn Innovation House; <i>Floor Mentor</i></strong>
+                  <br>Innovation House enables students to access, and leverage campus resources and networks during their personal exploration of creativity, innovation, and entrepreneurship.
                   <br><br>
                   <strong>Volunteer Service</strong>
                   <br>UConn STEM Night, Northeast Science Bowl, UConn Open House - Engineering
@@ -530,12 +574,27 @@
                 <!-- Portfolio Modal - Image -->
                 <img class="img-fluid rounded mb-5" src="img/portfolio/ih.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5"><strong>UConn Innovation House; <i>Floor Mentor</i></strong>
-                  <br>- Work and collaborate with fellow leaders and residents in order to stimulate 
+                <div class="mb-5">
+                  <div style = "opacity: 0.5">
+                  <strong>C.S.E. Undergratuate Teaching Assistant; <i>Digital Logic Design</i></strong>
+                  <br>Starting January 2020
+                  <ul style = "list-style-position:inside;">
+                    <li>Instruct labs sections of approximately 25 students each.</li>
+                    <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
+                    <li>Demonstrate knowledge of the subject and leadership skills.</li>
+                  </ul>
+                  </div>
+                  <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
+                  <br>Manage all funds for the UConn Chapter of UPE.
+                  <br><br>
+                  <strong>UConn Innovation House; <i>Floor Mentor</i></strong>
+                  <ul style = "list-style-position:inside;">
+                  <li>Work and collaborate with fellow leaders and residents in order to stimulate 
                   community bonding by planning events for a floor of over 80 residents.
-                  <br>- Established a strategic business solution targeting technology education in partnership with UConn’s
+                  <li>Established a strategic business solution targeting technology education in partnership with UConn’s
                   Innovation initiative.
-                </p>
+                  </ul>
+                </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -572,17 +631,30 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/hu.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/IMG_2088.JPG" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
+                  <a style="color:black" href="https://p4gtl.herokuapp.com/">
+                  <strong>HackUMass VII; <i>¡Please 4Get the Lyrics! - Front End Developer</i></strong>
+                  </a>
+                  <br>Music-lyric trivia meets Kahoot in our fast-paced, phone-based music guessing game!
+                  Using a experimental speech recognition system, karaoke files, and the Spotify API, compete against your friends in a game of peer-to-peer karaoke.
+                  <br><br>
                   <strong>Hack UConn 2019; <i>Team Insight - Software Developer</i></strong>
                   <br>Developed an augmented reality product to benefit the hearing impaired by delivering accessible speech-to-
                   text translation through the implementation of facial recognition (Python).
+                  <br><br>
+                  <strong>UConn ACM; <i>Pokerbot</i></strong>
+                  <br>Collaborate with fellow team members in designing a poker-bot capable of playing amongst multiple opponents while incorporating machine learning properties (Python).
                   <br><br>
                   <strong><a style="color:black" href="https://youtu.be/hO8qs4QV55k">Laser Transmitter and Receiver Unit</a></strong>
                   <br>Electric Circuit utilizing operational amplifiers, RLC circuits, and a laser with the goal of transmitting 
                   audio signals with little to no background noise/static. Laser can be operated at a variety of distances, 
                   with adjustable volume control on either end.
+                  <br><br>
+                  <strong>UConn Innovation House; <i>Project Omega</i></strong>
+                  <br>Established a strategic business solution targeting technology education in partnership with UConn’s
+                  Innovation initiative.
                 </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
