--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/IMG_2088.JPG" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/IMG_2088.JPG" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
                   <a style="color:black" href="https://p4gtl.herokuapp.com/">
