--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <p class="lead">Michael is an undergraduate student at the University of Connecticut working towards completing his Bachelor of Science in Engineering for Computer Science and Engineering. Michael will be concentrating in Software Development and Design, and is concurrently working to complete his minor in Mathematics.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Michael has a great interest in the application of mathematics underlying within algorithms, electric circuits, and physics. Michael's courseload has helped to solidify his mathematical skills, as he has recently achieved top marks in his Calculus and Differential Equations courses.</p>
+          <p class="lead">Michael has a great interest for the application of computation to everyday life, as well as the application of mathematics and sciences involved within the field. Michael's involvement has helped to solifify his software, hardware, and problem solving skills, having been acknowledged for his contributions.</p>
         </div>
       </div>
 
@@ -227,45 +227,39 @@
 
       <!-- Contact Section Form -->
       <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-          <form name="sentMessage" id="contactForm" novalidate="novalidate">
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Name</label>
-                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
+          <div class="col-lg-8 col-lg-offset-2">
+              <form action="https://formspree.io/xbjldyqw" method="POST" />
+              <div class="control-group">
+                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                  <label>Name</label>
+                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
+                  <p class="help-block text-danger"></p>
+                </div>
               </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Email Address</label>
-                <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
+              <div class="control-group">
+                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                  <label>Email Address</label>
+                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
+                  <p class="help-block text-danger"></p>
+                </div>
               </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Phone Number</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                <p class="help-block text-danger"></p>
+              <div class="control-group">
+                <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                  <label>Message</label>
+                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
               </div>
-            </div>
-            <div class="control-group">
-              <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                <label>Message</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
+              <br>
+              <div id="success"></div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
               </div>
-            </div>
-            <br>
-            <div id="success"></div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
+    </section>
 
     </div>
   </section>
@@ -351,7 +345,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i>
                   <br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i>
@@ -408,7 +402,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/its.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/its.jpg" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5" style = "opacity: 0.5">
                   <strong>UConn School of Engineering Undergraduate Teaching Assistant
@@ -464,7 +458,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/upe.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/upe.png" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
                   <strong>HackUMass VII; <i>Second Place Overall</i></strong>
@@ -516,7 +510,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/acm.jpg" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/acm.jpg" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
                   <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
@@ -572,7 +566,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/ih.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/ih.png" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5">
                   <div style = "opacity: 0.5">
