--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <p class="lead">Michael is an undergraduate student at the University of Connecticut working towards completing his Bachelor of Science in Engineering for Computer Science and Engineering. Michael will be concentrating in Software Development and Design, and is concurrently working to complete his minor in Mathematics.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Michael has a great interest for the application of computation to everyday life, as well as the application of mathematics and sciences involved within the field. Michael's involvement has helped to solifify his software, hardware, and problem solving skills, having been acknowledged for his contributions.</p>
+          <p class="lead">Michael has a great interest for the application of computation to everyday life, as well as the application of mathematics and sciences involved within the field. Michael's involvement has helped to solifify his software, hardware, and problem solving skills, as well as having been acknowledged for his contributions.</p>
         </div>
       </div>
 
@@ -411,7 +411,6 @@
                   <ul style = "list-style-position:inside;">
                     <li>Instruct labs sections of approximately 25 students each.</li>
                     <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
-                    <li>Demonstrate knowledge of the subject and leadership skills.</li>
                   </ul>
                 </div>
                 <div class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician, Knowledge Base Team Member</i></strong>
@@ -575,19 +574,14 @@
                   <ul style = "list-style-position:inside;">
                     <li>Instruct labs sections of approximately 25 students each.</li>
                     <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
-                    <li>Demonstrate knowledge of the subject and leadership skills.</li>
                   </ul>
                   </div>
                   <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
                   <br>Manage all funds for the UConn Chapter of UPE.
                   <br><br>
                   <strong>UConn Innovation House; <i>Floor Mentor</i></strong>
-                  <ul style = "list-style-position:inside;">
-                  <li>Work and collaborate with fellow leaders and residents in order to stimulate 
+                  Work and collaborate with fellow leaders and residents in order to stimulate 
                   community bonding by planning events for a floor of over 80 residents.
-                  <li>Established a strategic business solution targeting technology education in partnership with UConn’s
-                  Innovation initiative.
-                  </ul>
                 </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
