--- a/index.html
+++ b/index.html
@@ -351,19 +351,20 @@
                   <br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i>
                   <br>Mathematics Minor</strong> 
                   <br>
-                  <br><i>Relevant Coursework: </i>
-                    <ul style = "list-style-position:inside;">
-                      <li>Data Structures and Object Oriented Programming</li>
-                      <li>Introduction to Discrete Systems</li>
-                      <li>Digital Logic Design</li>
-                      <li>Electric Circuits</li>
-                      <li>Multivariable Calculus</li>
-                      <li>Elementary Differential Equations</li>
-                      <li style = "opacity: 0.5">Systems Programming (In Progress - I.P.)</li>
-                      <li style = "opacity: 0.5">Algorithms and Complexity (I.P.)</li>
-                      <li style = "opacity: 0.5">Introduction to Computer Architecture (I.P)</li>
-                      <li style = "opacity: 0.5">Applied Linear Algebra (I.P.)</li>
-                      <li style = "opacity: 0.5">Probability (I.P.)</li>
+                  <br><i style="text-decoration: underline;">Relevant Coursework: </i>
+                      <br>Data Structures and Object Oriented Programming
+                      <br>Introduction to Discrete Systems
+                      <br>Digital Logic Design
+                      <br>Electric Circuits
+                      <br>Multivariable Calculus
+                      <br>Elementary Differential Equations
+                      <spam style = "opacity: 0.5">
+                      <br>Systems Programming (In Progress - I.P.)
+                      <br>Algorithms and Complexity (I.P.)
+                      <br>Introduction to Computer Architecture (I.P)
+                      <br>Applied Linear Algebra (I.P.)
+                      <br>Probability (I.P.)
+                      </span>
                     </ul>
                   </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -472,7 +473,11 @@
                   <br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.
                   <br><br>
                   <strong>Deans List Engineering</strong>
-                  <br>Rank within the upper 25th percentile in the School of Engineering.</p>
+                  <br>Rank within the upper 25th percentile in the School of Engineering.
+                  <br><br>
+                  <strong>N.H.S. Alumni Association Richard Madey Science Award</strong>
+                  <br>Awarded to the graduating senior with the highest G.P.A. in Physics, Algebra and either Chemistry or Biology.
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -580,7 +585,7 @@
                   <br>Manage all funds for the UConn Chapter of UPE.
                   <br><br>
                   <strong>UConn Innovation House; <i>Floor Mentor</i></strong>
-                  Work and collaborate with fellow leaders and residents in order to stimulate 
+                  <br>Work and collaborate with fellow leaders and residents in order to stimulate 
                   community bonding by planning events for a floor of over 80 residents.
                 </div>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -643,6 +648,9 @@
                   <strong>UConn Innovation House; <i>Project Omega</i></strong>
                   <br>Established a strategic business solution targeting technology education in partnership with UConn’s
                   Innovation initiative.
+                  <br><br>
+                  <strong>Personal Website; <i>mtylr.com</i></strong>
+                  <br>This website can be used as both a supplement and a complement to my CV/Resume. This website was put together to implement self taught skills in HTML, CSS, JavaScript, and other web development tools/languages.
                 </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
