--- a/resume.html
+++ b/resume.html
@@ -93,7 +93,7 @@
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
                   <label>Message</label>
-                  <textarea name="request reason" class="form-control" id="message" rows="5" placeholder="Reason for Request" required="required" data-validation-required-message="Please enter a message."></textarea>
+                  <textarea name="request reason" class="form-control" id="message" rows="5" placeholder="Reason for Request" required="required" data-validation-required-message="Please enter a reason for your request."></textarea>
                   <p class="help-block text-danger"></p>
                 </div>
               </div>
