--- a/index.html
+++ b/index.html
@@ -352,18 +352,21 @@
                   <br>Mathematics Minor</strong> 
                   <br>
                   <br><i style="text-decoration: underline;">Relevant Coursework: </i>
-                      <br>Data Structures and Object Oriented Programming
-                      <br>Introduction to Discrete Systems
-                      <br>Digital Logic Design
-                      <br>Electric Circuits
+                      <br>General Chemistry
+                      <br>Physics for Engineers (I & II)
+                      <br>Electrical Circuits
+                      <br>Foundations of Engineering
                       <br>Multivariable Calculus
                       <br>Elementary Differential Equations
-                      <spam style = "opacity: 0.5">
-                      <br>Systems Programming (In Progress - I.P.)
-                      <br>Algorithms and Complexity (I.P.)
-                      <br>Introduction to Computer Architecture (I.P)
-                      <br>Applied Linear Algebra (I.P.)
-                      <br>Probability (I.P.)
+                      <br>Applied Linear Algebra
+                      <br>Probability
+                      <br>Data Structures and Object Oriented Programming
+                      <br>Digital Logic Design
+                      <br>Systems Programming
+                      <br>Algorithms and Complexity
+                      <br>Introduction to Computer Architecture
+                      <span style = "opacity: 0.5">
+                      
                       </span>
                     </ul>
                   </div>
@@ -633,7 +636,7 @@
                   <br>Music-lyric trivia meets Kahoot in our fast-paced, phone-based music guessing game!
                   Using a experimental speech recognition system, karaoke files, and the Spotify API, compete against your friends in a game of peer-to-peer karaoke.
                   <br><br>
-                  <strong>Hack UConn 2019; <i>Team Insight - Software Developer</i></strong>
+                  <strong>HackUConn 2019; <i>Team Insight - Software Developer</i></strong>
                   <br>Developed an augmented reality product to benefit the hearing impaired by delivering accessible speech-to-
                   text translation through the implementation of facial recognition (Python).
                   <br><br>
