--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/engineering.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/Education.png" alt="">
           </div>
         </div>
 
@@ -114,7 +114,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/its.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/WorkExperience.png" alt="">
           </div>
         </div>
 
@@ -126,7 +126,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/upe.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Honors.png" alt="">
           </div>
         </div>
 
@@ -138,7 +138,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/acm.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/Involvement.png" alt="">
           </div>
         </div>
 
@@ -150,7 +150,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/ih.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Leadership.png" alt="">
           </div>
         </div>
 
@@ -162,7 +162,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/hu.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Projects.png" alt="">
           </div>
         </div>
 
@@ -406,12 +406,11 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/its.jpg" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/WorkExperience.png" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
-                <div class="mb-5" style = "opacity: 0.5">
+                <div class="mb-5">
                   <strong>UConn School of Engineering Undergraduate Teaching Assistant
                   <br><i>Computer Science and Engineering; Digital Logic Design</i></strong>
-                  <br>Starting January 2020
                   <ul style = "list-style-position:inside;">
                     <li>Instruct labs sections of approximately 25 students each.</li>
                     <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
@@ -425,6 +424,12 @@
                     articles onto new web client.
                   </ul> 
                 </div>
+                <p>
+                  <strong>Licenses and Certifications</strong>
+                  <br>IBM Master the Mainframe 2019 - Part 2, Architecting with Google Compute Engine Specialization, Elastic Cloud Infrastructure: Scaling and Automation,
+                  Reliable Cloud Infrastructure: Design and Process, Essential Cloud Infrastructure: Core Services, Essential Cloud Infrastructure: Foundation, 
+                  Google Cloud Platform Fundamentals: Core Infrastructure
+                </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -461,9 +466,13 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/upe.png" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Honors.png" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
+                  <strong>IBM Master the Mainframe 2019 Wall of Fame</strong>
+                  <br>Mastery of basic mainframe concepts, demonstrating the ability to perform programming (advanced commands, system setup, 
+                  and advanced system navigation) and application developing tasks (C, JAVA, COBOL, assembler and REXX) all on the z/OS platform.
+                  <br><br>
                   <strong>HackUMass VII; <i>Second Place Overall</i></strong>
                   <br>Team project placed within the top 4 of HackUMass VII projects in the preliminary judging round. After a finalist judging round, our project placed second in the overall competition.
                   <br><br>
@@ -517,10 +526,10 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/acm.jpg" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Involvement.png" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
-                  <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
+                  <strong>Upsilon Pi Epsilon; <i>Treasurer/CFO</i></strong>
                   <br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.
                   <br><br>
                   <strong>UConn Association for Computing Machinery; <i>Deep Learning Project Member</i></strong> 
@@ -573,12 +582,11 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/ih.png" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Leadership.png" alt="" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5">
-                  <div style = "opacity: 0.5">
+                  <div>
                   <strong>C.S.E. Undergratuate Teaching Assistant; <i>Digital Logic Design</i></strong>
-                  <br>Starting January 2020
                   <ul style = "list-style-position:inside;">
                     <li>Instruct labs sections of approximately 25 students each.</li>
                     <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
