--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/IMG_0971.jpg" alt="">
+      <img class="masthead-avatar mb-5" src="img/IMG_0971.jpg" alt="Profile Picture">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading text-uppercase mb-0">Michael Taylor</h1>
@@ -102,7 +102,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Education.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Education.png" alt="Education">
           </div>
         </div>
 
@@ -114,7 +114,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/WorkExperience.png" alt="">
+            <img class="img-fluid" src="img/portfolio/WorkExperience.png" alt="Work Experience">
           </div>
         </div>
 
@@ -126,7 +126,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Honors.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Honors.png" alt="Honors and Awards">
           </div>
         </div>
 
@@ -138,7 +138,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Involvement.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Involvement.png" alt="Involvement">
           </div>
         </div>
 
@@ -150,7 +150,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Leadership.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Leadership.png" alt="Leadership">
           </div>
         </div>
 
@@ -162,7 +162,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/Projects.png" alt="">
+            <img class="img-fluid" src="img/portfolio/Projects.png" alt="Projects">
           </div>
         </div>
 
@@ -308,7 +308,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Michael Taylor 2019</small>
+      <small>Copyright &copy; Michael Taylor 2020</small>
     </div>
   </section>
 
@@ -345,7 +345,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/engineering.jpg" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Education.png" alt="Education" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5"><strong>University of Connecticut; <i>School of Engineering</i>
                   <br>Bachelor of Science in Engineering; <i>Computer Science and Engineering</i>
@@ -406,7 +406,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/WorkExperience.png" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/WorkExperience.png" alt="Work Experience" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5">
                   <strong>UConn School of Engineering Undergraduate Teaching Assistant
@@ -466,9 +466,12 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/Honors.png" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Honors.png" alt="Honors and Awards" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
+                  <strong>2019 New England Scholar</strong>
+                  <br>Semester grade point average of at least a 3.7 for the spring and fall semesters of the 2019 calendar year.
+                  <br><br>
                   <strong>IBM Master the Mainframe 2019 Wall of Fame</strong>
                   <br>Mastery of basic mainframe concepts, demonstrating the ability to perform programming (advanced commands, system setup, 
                   and advanced system navigation) and application developing tasks (C, JAVA, COBOL, assembler and REXX) all on the z/OS platform.
@@ -526,7 +529,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/Involvement.png" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Involvement.png" alt="Involvement" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
                   <strong>Upsilon Pi Epsilon; <i>Treasurer/CFO</i></strong>
@@ -582,7 +585,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/Leadership.png" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/Leadership.png" alt="Leadership" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5">
                   <div>
@@ -635,7 +638,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/IMG_2088.JPG" alt="" style = "margin-left: auto; margin-right: auto;">
+                <img class="img-fluid rounded mb-5" src="img/portfolio/IMG_2088.JPG" alt="HackUMass VII Team P4GTL" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
                   <a style="color:black" href="https://p4gtl.herokuapp.com/">
